# MLOpsBootcampEDA

./: .gitignore  pyproject.toml
eda/: eda.ipynb
