[tool.poetry]
name = "eda"
version = "0.1.0"
description = ""
authors = ["Topi99 <topiltzin.hernandez@wizeline.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.4"
numpy = "^1.23.2"
matplotlib = "^3.5.3"
seaborn = "^0.12.0"
notebook = "^6.4.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
